--- a/_modules/index.html
+++ b/_modules/index.html
@@ -5,13 +5,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Overview: module code &#8212; pybgen 0.1.0 documentation</title>
+    <title>Overview: module code &#8212; pybgen 0.3.0 documentation</title>
     <link rel="stylesheet" href="../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.1.0',
+        VERSION:     '0.3.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -78,7 +78,8 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="pybgen.html">pybgen</a></li>
-<ul><li><a href="pybgen/pybgen.html">pybgen.pybgen</a></li>
+<ul><li><a href="pybgen/parallel.html">pybgen.parallel</a></li>
+<li><a href="pybgen/pybgen.html">pybgen.pybgen</a></li>
 </ul></ul>
 
           </div>
