--- a/_modules/pybgen.html
+++ b/_modules/pybgen.html
@@ -5,13 +5,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>pybgen &#8212; pybgen 0.1.0 documentation</title>
+    <title>pybgen &#8212; pybgen 0.3.0 documentation</title>
     <link rel="stylesheet" href="../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.1.0',
+        VERSION:     '0.3.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -107,6 +107,7 @@
 
 
 <span class="kn">from</span> <span class="nn">.pybgen</span> <span class="k">import</span> <span class="n">PyBGEN</span>
+<span class="kn">from</span> <span class="nn">.parallel</span> <span class="k">import</span> <span class="n">ParallelPyBGEN</span>
 
 <span class="k">try</span><span class="p">:</span>
     <span class="kn">from</span> <span class="nn">.version</span> <span class="k">import</span> <span class="n">pybgen_version</span> <span class="k">as</span> <span class="n">__version__</span>
