--- a/genindex.html
+++ b/genindex.html
@@ -6,13 +6,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; pybgen 0.1.0 documentation</title>
+    <title>Index &#8212; pybgen 0.3.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.1.0',
+        VERSION:     '0.3.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -111,9 +111,15 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="pybgen.html#pybgen.PyBGEN.iter_variant_info">iter_variant_info() (pybgen.PyBGEN method)</a>
 </li>
+      <li><a href="pybgen.html#pybgen.ParallelPyBGEN.iter_variants">iter_variants() (pybgen.ParallelPyBGEN method)</a>
+
+      <ul>
+        <li><a href="pybgen.html#pybgen.PyBGEN.iter_variants">(pybgen.PyBGEN method)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pybgen.html#pybgen.PyBGEN.iter_variants">iter_variants() (pybgen.PyBGEN method)</a>
+      <li><a href="pybgen.html#pybgen.ParallelPyBGEN.iter_variants_by_name">iter_variants_by_name() (pybgen.ParallelPyBGEN method)</a>
 </li>
       <li><a href="pybgen.html#pybgen.PyBGEN.iter_variants_in_region">iter_variants_in_region() (pybgen.PyBGEN method)</a>
 </li>
@@ -137,10 +143,12 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pybgen.html#pybgen.PyBGEN">PyBGEN (class in pybgen)</a>
+      <li><a href="pybgen.html#pybgen.ParallelPyBGEN">ParallelPyBGEN (class in pybgen)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pybgen.html#pybgen.PyBGEN">PyBGEN (class in pybgen)</a>
+</li>
       <li><a href="pybgen.html#module-pybgen">pybgen (module)</a>
 </li>
   </ul></td>
