--- a/_modules/pybgen/parallel.html
+++ b/_modules/pybgen/parallel.html
@@ -5,13 +5,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>pybgen.parallel &#8212; pybgen 0.3.0 documentation</title>
+    <title>pybgen.parallel &#8212; pybgen 0.3.1 documentation</title>
     <link rel="stylesheet" href="../../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.3.0',
+        VERSION:     '0.3.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -178,7 +178,7 @@
 
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_parallel_iter_seeks</span><span class="p">(</span><span class="n">seeks</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="ParallelPyBGEN.iter_variants_by_name"><a class="viewcode-back" href="../../pybgen.html#pybgen.ParallelPyBGEN.iter_variants_by_name">[docs]</a>    <span class="k">def</span> <span class="nf">iter_variants_by_name</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">names</span><span class="p">):</span>
+<div class="viewcode-block" id="ParallelPyBGEN.iter_variants_by_names"><a class="viewcode-back" href="../../pybgen.html#pybgen.ParallelPyBGEN.iter_variants_by_names">[docs]</a>    <span class="k">def</span> <span class="nf">iter_variants_by_names</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">names</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Iterates over variants using a list of names.</span>
 
 <span class="sd">        Args:</span>
@@ -252,7 +252,7 @@
       &copy;2017, Louis-Philippe Lemieux Perreault.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.6.3</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.6.5</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.10</a>
       
     </div>
