--- a/genindex.html
+++ b/genindex.html
@@ -6,13 +6,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; pybgen 0.3.0 documentation</title>
+    <title>Index &#8212; pybgen 0.3.1 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.3.0',
+        VERSION:     '0.3.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -119,7 +119,7 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pybgen.html#pybgen.ParallelPyBGEN.iter_variants_by_name">iter_variants_by_name() (pybgen.ParallelPyBGEN method)</a>
+      <li><a href="pybgen.html#pybgen.ParallelPyBGEN.iter_variants_by_names">iter_variants_by_names() (pybgen.ParallelPyBGEN method)</a>
 </li>
       <li><a href="pybgen.html#pybgen.PyBGEN.iter_variants_in_region">iter_variants_in_region() (pybgen.PyBGEN method)</a>
 </li>
@@ -181,7 +181,7 @@
       &copy;2017, Louis-Philippe Lemieux Perreault.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.6.3</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.6.5</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.10</a>
       
     </div>
