--- a/_modules/pybgen/parallel.html
+++ b/_modules/pybgen/parallel.html
@@ -5,13 +5,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>pybgen.parallel &#8212; pybgen 0.3.1 documentation</title>
+    <title>pybgen.parallel &#8212; pybgen 0.4.1 documentation</title>
     <link rel="stylesheet" href="../../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.3.1',
+        VERSION:     '0.4.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -199,11 +199,18 @@
 
     <span class="k">def</span> <span class="nf">_get_seeks_for_names</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">names</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Gets the seek values for each names.&quot;&quot;&quot;</span>
+        <span class="c1"># Generating a temporary table that will contain the markers to extract</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_bgen_index</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span><span class="s2">&quot;CREATE TEMPORARY TABLE tnames (name text)&quot;</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_bgen_index</span><span class="o">.</span><span class="n">executemany</span><span class="p">(</span>
+            <span class="s2">&quot;INSERT INTO tnames VALUES (?)&quot;</span><span class="p">,</span>
+            <span class="p">[(</span><span class="n">n</span><span class="p">,</span> <span class="p">)</span> <span class="k">for</span> <span class="n">n</span> <span class="ow">in</span> <span class="n">names</span><span class="p">],</span>
+        <span class="p">)</span>
+
+        <span class="c1"># Fetching the seek positions</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_bgen_index</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span>
             <span class="s2">&quot;SELECT file_start_position &quot;</span>
             <span class="s2">&quot;FROM Variant &quot;</span>
-            <span class="s2">&quot;WHERE rsid IN (</span><span class="si">{}</span><span class="s2">)&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="s2">&quot;,&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">([</span><span class="s2">&quot;?&quot;</span><span class="p">]</span><span class="o">*</span><span class="nb">len</span><span class="p">(</span><span class="n">names</span><span class="p">))),</span>
-            <span class="nb">tuple</span><span class="p">(</span><span class="n">names</span><span class="p">),</span>
+            <span class="s2">&quot;WHERE rsid IN (SELECT name FROM tnames)&quot;</span><span class="p">,</span>
         <span class="p">)</span>
         <span class="k">return</span> <span class="nb">tuple</span><span class="p">(</span><span class="n">_</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="k">for</span> <span class="n">_</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_bgen_index</span><span class="o">.</span><span class="n">fetchall</span><span class="p">())</span>
 
