--- a/_modules/pybgen/parallel.html
+++ b/_modules/pybgen/parallel.html
@@ -4,9 +4,9 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>pybgen.parallel &#8212; pybgen 0.4.2 documentation</title>
+    <title>pybgen.parallel &#8212; pybgen 0.5.0 documentation</title>
     <link rel="stylesheet" href="../../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" src="../../_static/documentation_options.js"></script>
@@ -123,9 +123,10 @@
 <span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
 
 
-<span class="k">def</span> <span class="nf">_pybgen_reader</span><span class="p">(</span><span class="n">fn</span><span class="p">,</span> <span class="n">prob_t</span><span class="p">,</span> <span class="n">seeks</span><span class="p">,</span> <span class="n">queue</span><span class="p">):</span>
+<span class="k">def</span> <span class="nf">_pybgen_reader</span><span class="p">(</span><span class="n">fn</span><span class="p">,</span> <span class="n">prob_t</span><span class="p">,</span> <span class="n">probs_only</span><span class="p">,</span> <span class="n">seeks</span><span class="p">,</span> <span class="n">queue</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Reads specific markers according to a seek queue.&quot;&quot;&quot;</span>
-    <span class="k">with</span> <span class="n">PyBGEN</span><span class="p">(</span><span class="n">fn</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s2">&quot;r&quot;</span><span class="p">,</span> <span class="n">prob_t</span><span class="o">=</span><span class="n">prob_t</span><span class="p">,</span> <span class="n">_skip_index</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span> <span class="k">as</span> <span class="n">bgen</span><span class="p">:</span>
+    <span class="k">with</span> <span class="n">PyBGEN</span><span class="p">(</span><span class="n">fn</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s2">&quot;r&quot;</span><span class="p">,</span> <span class="n">prob_t</span><span class="o">=</span><span class="n">prob_t</span><span class="p">,</span> <span class="n">probs_only</span><span class="o">=</span><span class="n">probs_only</span><span class="p">,</span>
+                <span class="n">_skip_index</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span> <span class="k">as</span> <span class="n">bgen</span><span class="p">:</span>
         <span class="k">for</span> <span class="n">r</span> <span class="ow">in</span> <span class="n">bgen</span><span class="o">.</span><span class="n">_iter_seeks</span><span class="p">(</span><span class="n">seeks</span><span class="p">):</span>
             <span class="n">queue</span><span class="o">.</span><span class="n">put</span><span class="p">(</span><span class="n">r</span><span class="p">)</span>
     <span class="n">queue</span><span class="o">.</span><span class="n">put</span><span class="p">(</span><span class="kc">None</span><span class="p">)</span>
@@ -138,6 +139,7 @@
 <span class="sd">        fn (str): The name of the BGEN file.</span>
 <span class="sd">        prob_t (float): The probability threshold (optional).</span>
 <span class="sd">        cpus (int): The number of CPUs (default is 2).</span>
+<span class="sd">        probs_only (boolean): Return only the probabilities instead of dosage.</span>
 <span class="sd">        max_variants (int): The maximal number of variants in the Queue</span>
 
 <span class="sd">    Reads a BGEN file using multiple processes.</span>
@@ -152,10 +154,13 @@
 
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">fn</span><span class="p">,</span> <span class="n">prob_t</span><span class="o">=</span><span class="mf">0.9</span><span class="p">,</span> <span class="n">cpus</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span> <span class="n">max_variants</span><span class="o">=</span><span class="mi">1000</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">fn</span><span class="p">,</span> <span class="n">prob_t</span><span class="o">=</span><span class="mf">0.9</span><span class="p">,</span> <span class="n">cpus</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span> <span class="n">probs_only</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
+                 <span class="n">max_variants</span><span class="o">=</span><span class="mi">1000</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Initializes a new PyBGEN instance.&quot;&quot;&quot;</span>
         <span class="c1"># Calling the parent&#39;s constructor</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">ParallelPyBGEN</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">fn</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s2">&quot;r&quot;</span><span class="p">,</span> <span class="n">prob_t</span><span class="o">=</span><span class="n">prob_t</span><span class="p">)</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">ParallelPyBGEN</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span>
+            <span class="n">fn</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s2">&quot;r&quot;</span><span class="p">,</span> <span class="n">prob_t</span><span class="o">=</span><span class="n">prob_t</span><span class="p">,</span> <span class="n">probs_only</span><span class="o">=</span><span class="n">probs_only</span><span class="p">,</span>
+        <span class="p">)</span>
 
         <span class="c1"># Initializing the queue and process</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">cpus</span> <span class="o">=</span> <span class="n">cpus</span>
@@ -213,7 +218,8 @@
         <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">cpus</span><span class="p">):</span>
             <span class="n">worker</span> <span class="o">=</span> <span class="n">multiprocessing</span><span class="o">.</span><span class="n">Process</span><span class="p">(</span>
                 <span class="n">target</span><span class="o">=</span><span class="n">_pybgen_reader</span><span class="p">,</span>
-                <span class="n">args</span><span class="o">=</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_bgen</span><span class="o">.</span><span class="n">name</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">prob_t</span><span class="p">,</span> <span class="n">seeks</span><span class="p">[</span><span class="n">i</span><span class="p">],</span> <span class="n">queue</span><span class="p">),</span>
+                <span class="n">args</span><span class="o">=</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_bgen</span><span class="o">.</span><span class="n">name</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">prob_t</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_return_probs</span><span class="p">,</span>
+                      <span class="n">seeks</span><span class="p">[</span><span class="n">i</span><span class="p">],</span> <span class="n">queue</span><span class="p">),</span>
             <span class="p">)</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_workers</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">worker</span><span class="p">)</span>
             <span class="n">worker</span><span class="o">.</span><span class="n">start</span><span class="p">()</span>
@@ -252,7 +258,7 @@
       &copy;2017, Louis-Philippe Lemieux Perreault.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.7.0</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.7.1</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.10</a>
       
     </div>
