--- a/installation.html
+++ b/installation.html
@@ -4,9 +4,9 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Installation &#8212; pybgen 0.4.2 documentation</title>
+    <title>Installation &#8212; pybgen 0.5.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript" src="_static/documentation_options.js"></script>
@@ -91,9 +91,12 @@ conda install pybgen
 <span class="go">......................................................................</span>
 <span class="go">......................................................................</span>
 <span class="go">......................................................................</span>
-<span class="go">......</span>
+<span class="go">......................................................................</span>
+<span class="go">......................................................................</span>
+<span class="go">......................................................................</span>
+<span class="go">............................................</span>
 <span class="go">----------------------------------------------------------------------</span>
-<span class="go">Ran 216 tests in 8.468s</span>
+<span class="go">Ran 464 tests in 16.826s</span>
 
 <span class="go">OK</span>
 </pre></div>
@@ -110,7 +113,7 @@ conda install pybgen
       &copy;2017, Louis-Philippe Lemieux Perreault.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.7.0</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.7.1</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.10</a>
       
       |
